--- a/public/index.html
+++ b/public/index.html
@@ -164,10 +164,10 @@
                     <a href="https://github.com/M3264" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
                 <div class="tile">
-                    <img src="https://github.com/random.png" alt="random">
-                    <h4>random</h4>
-                    <p>random</p>
-                    <a href="https://github.com/random" target="_blank"><i class="fab fa-github"></i></a>
+                    <img src="https://github.com/ronen6999.png" alt="random">
+                    <h4>Ronen</h4>
+                    <p>Backend Developer</p>
+                    <a href="https://github.com/ronen6999" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
                 <div class="tile">
                     <img src="https://github.com/random.png" alt="random">
