Little aupdate by Famous-Tech

--- a/public/index.html
+++ b/public/index.html
@@ -322,6 +322,7 @@
             <div class="footer-bottom">
                 <p>© 2025 CodeNoSekai Community. All rights reserved.</p>
                 <p class="credits">Created and designed by <a href="https://github.com/M3264" target="_blank">Kord</a></p>
+                <p class="tech-credits">Backend, database and server management by <a href="https://me.famoustech.biz.id" target="_blank">Famous Tech</a></p>
             </div>
         </div>
     </footer>
