docs: Update team member profile link

--- a/public/index.html
+++ b/public/index.html
@@ -170,10 +170,10 @@
                     <a href="https://github.com/ronen6999" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
                 <div class="tile">
-                    <img src="https://github.com/random.png" alt="random">
-                    <h4>random</h4>
+                    <img src="https://github.com/itsreimau.png" alt="random">
+                    <h4>ItsReimau</h4>
                     <p>Backend Developer</p>
-                    <a href="https://github.com/random" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/itsreimau" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
                 <div class="tile">
                     <img src="https://github.com/random.png" alt="random">
